# Springs-and-dampers

./: .gitignore  CMakeLists.txt  main.cpp  model.cpp  model.h  objfile.cpp  objfile.h  vector3.cpp  vector3.h  vertex.cpp  vertex.h
Iluminacion + Transformacion/: CMakeLists.txt  archivoobj.cpp  archivoobj.h  main.cpp  transformacion.cpp  transformacion.h  util.h  vertice.cpp  vertice.h
SpAndDp/: CMakeLists.txt  archivoobj.cpp  archivoobj.h  main.cpp  objfile.cpp  objfile.h  util.h  vertice.cpp
iluminacion/: archivoobj.cpp  archivoobj.h  main.cpp
